tests/NormalTests/paczka1/fuzzy1/57701866.err
Error in line 5: 0dW6 A369 30,8
Error in line 10: DGbeIVgYs2 S58 72,2
Error in line 17: DGbeIVgYs2 S979 99,2
Error in line 25: jPgnQJMUC A369 ?,9
Error in line 26: DGbeIVgYs2 A369 42,91
Error in line 22: FJLdMxBs01J S979 24,8
Error in line 24: jPgnQJMUC A369 17,7
Error in line 34: 4KV A847 0,8
